--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "duelsplus-cli",
+  "version": "1.0.0",
   "module": "src/index.ts",
   "devDependencies": {
     "@types/bun": "latest"
