--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@clack/prompts": "^0.11.0",
     "@types/cli-progress": "^3.11.6",
-    "cli-progress": "^3.12.0"
+    "@types/semver": "^7.7.1",
+    "cli-progress": "^3.12.0",
+    "semver": "^7.7.3"
   }
 }
