--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           fi
 
           echo "Building target=${{ matrix.target }} -> $OUT"
-          bun build --compile --minify --sourcemap --target="${{ matrix.target }}" "$ENTRY" \
+          bun build --compile --production --sourcemap --target="${{ matrix.target }}" "$ENTRY" \
             --outfile "$OUT" \
             --define BUILD_VERSION="\"${TAG}\"" \
             --define BUILD_TIME="\"${TS}\""
