[fix]: fix settings page+ink

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/*": ["./src/*"],
       "@core/*": ["./src/core/*"],
       "@cmd/*": ["./src/commands/*"],
-      "@lib/*": ["./src/lib/*"]
+      "@lib/*": ["./src/lib/*"],
+      "@components/*": ["./src/components/*"]
     },
 
     // Best practices
